# 1.1.0-dev.1 10/23/13
10/23/13 demonstrate "Report a Problem" item in PhET menu
10/4/13 revert to string keys that were used in Java
10/4/13 convert to use PhET string.js plugin
10/3/13 remove assert imports, assert is now a global
9/27/13 move MStrings.js to molarity-strings.js
9/23/13 convert to use chipper 'image' plug-in, and scenery-phet.ResetAllButton
9/19/13 move dependencies to sherpa, update to lodash-2.0.0, jquery-2.0.3, i18n-2.0.4, require-2.1.8
9/6/13 revert layout change #9
9/6/13 sun#20, ComboBox: make listParent a required constructor parameter, fix moveList
9/6/13 #9, fix layout that was broken by change of sun.CheckBox bounds in sun#18
9/5/12 smorgasbord#1, use namespace MOLARITY in requirejs imports
8/28/13 #6, expand touch area for "Show values" check box
# 1.0.0 8/16/13
8/13/13 branch '1.0' created
# 0.0.0-10 7/30/13
7/30/13 randomize the location of particles whenever the solute is changed, #4
7/30/13 optimize performance of PrecipitateNode by creating one set of particles whose color and visibility is changed to match solute and precipitate amount, #4
7/30/13 convert particle size and number of particles-per-mole from properties of Solute to constants in PrecipitateNode, in preparation for performance optimization, #4
7/30/13 clean up PrecipitateNode, in preparation for performance optimization, #4
7/30/13 remove dependency of PrecipitateParticleNode on Solute, in preparation for performance optimization, #4
7/30/13 change Solute.particleSize to Solute.particleLength, since particles are square
7/30/13 make particleColor an option for Solute, not a constructor param
7/30/13 improve performance of concentration display by drawing arrow once and changing its y position, #4
7/30/13 improve performance of drawing solution by making more efficient use of shapes, #4
7/29/13 add google-analytics.js to html and package.json
7/29/13 add meta tags that are in chipper.sim.html
7/29/13 use English string as default <title>